--- a/index2.html
+++ b/index2.html
@@ -8,9 +8,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="node_modules/font-awesome/css/font-awesome.min.css">
     <link rel="stylesheet" href="node_modules/bootstrap-social/bootstrap-social.css" />
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lobster|Open+Sans" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=BioRhyme|Cursive" />
     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/styles -2.css">
     <title>NuCamp: A Better Way To Camp</title>
 </head>
 
@@ -18,22 +18,17 @@
 
     <header class="jumbotron jumbotron-fluid">
         <div class="container"> 
-
             <div class="row">
-
                 <div class="col-4 col-sm-3 col-md-2 align-self-center">
                     <img src="img/logo.png" class="img-fluid">
                 </div>
-
                 <div class="col">
                     <h1>NuCamp</h1>
                     <h2>a better way to camp</h2>
                 </div>
-
                 <div class="col-md-4 col-xl-2 mt-4">
                     <a class="btn btn-info" type="button" data-toggle="modal" data-target="#reserveModal">Reserve Campsite</a>
                 </div>
-
             </div>
         </div>
     
@@ -95,7 +90,6 @@
     
                                 <div class="form-group row">
                                     <div class="col">
-                                        <button class="btn btn-primary" type="cancel" data-dismiss="modal">Cancel</button>
                                         <button class="btn btn-primary" type="submit">Search</button>
                                     </div>
                                 </div>
@@ -118,14 +112,14 @@
             </button>
             <div class="collapse navbar-collapse" id="nucampNavbar">
                 <ul class="navbar-nav">
-                    <li class="nav-item active"><a class="nav-link"  href="#"> <i class="fa fa-home fa-lg"></i>Home </a></li>
-                    <li class="nav-item"><a class="nav-link" href="aboutus.html"> <i class="fa fa-info fa-lg"></i>About Us</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#"> <i class=" fa fa-list fa-lg"></i>Sites</a></li>
-                    <li class="nav-item"><a class="nav-link" href="contactus.html"><i class="fa fa-address-card fa-lg"></i>Contact</a></li>
+                    <li class="nav-item active"><a class="nav-link text-white"  href="#"> <i class="fa fa-home fa-lg text-white"></i>Home </a></li>
+                    <li class="nav-item"><a class="nav-link text-white" href="aboutus.html"> <i class="fa fa-info fa-lg text-white"></i>About Us</a></li>
+                    <li class="nav-item"><a class="nav-link text-white" href="#"> <i class=" fa fa-list fa-lg text-white"></i>Sites</a></li>
+                    <li class="nav-item"><a class="nav-link text-white" href="contactus.html"><i class="fa fa-address-card fa-lg text-white"></i>Contact</a></li>
                 </ul>
-                <span class="navbar-text ml-auto">
+                <span class="navbar-text ml-auto text-white">
                     <a role="button" data-toggle="modal" data-target="#loginModal">
-                        <i class="fa fa-sign-in"></i> Login
+                        <i class="fa fa-sign-in text-white"></i> Login
                     </a>
                 </span>
              </div>
@@ -176,7 +170,7 @@
 
         <div class="row row-content">
             <div class="col-md-8 mx-auto">
-                <div id="homeCarousel" class="carousel slide" data-ride="carousel">
+                <div id="homeCarousel" class="carousel slide border-dark">
 
                     <ol class="carousel-indicators">
                         <li data-target="#homeCarousel" data-slide-to="0" class="active"></li>
@@ -187,7 +181,7 @@
                     <div class="carousel-inner">
 
                         <div class="carousel-item active">
-                            <img class="d-block w-100" src="img/breadcrumb-trail.jpg" alt="Breadcrumb Trail Campground">
+                            <img class="d-block w-100 border-dark" src="img/breadcrumb-trail.jpg" alt="Breadcrumb Trail Campground">
                             <div class="carousel-caption">
                                 <h3>Breadcrumb Trail Campground</h3>
                                 <p class="d-none d-sm-block">Let Nucamp be your guide to this off-the-beaten-path, hike-in-only campground.</p>
@@ -195,7 +189,7 @@
                         </div>
 
                         <div class="carousel-item">
-                            <img class="d-block w-100" src="img/react-lake.jpg" alt="React Lake Campground">
+                            <img class="d-block w-100 border-dark" src="img/react-lake.jpg" alt="React Lake Campground">
                             <div class="carousel-caption">
                                 <h3>React Lake Campground</h3>
                                 <p class="d-none d-sm-block">Nestled in the foothills of the Chrome Mountains, this campground on the shores of the pristine React Lake is a favorite for fly fishers.</p>
@@ -203,7 +197,7 @@
                         </div>
 
                         <div class="carousel-item">
-                            <img class="d-block w-100" src="img/chrome-river.jpg" alt="Chrome River Campground" />
+                            <img class="d-block w-100 border-dark" src="img/chrome-river.jpg" alt="Chrome River Campground" />
                             <div class="carousel-caption">
                                 <h3>Chrome River Campground</h3>
                                 <p class="d-none d-sm-block">Spend a few sunny days and starry nights beneath a canopy of old-growth firs at this enchanting spot by the Chrome River.</p>
