--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 </div>
 
                 <div class="col-md-4 col-xl-2 mt-4">
-                    <a class="btn btn-info" type="button" data-toggle="modal" data-target="#reserveModal">Reserve Campsite</a>
+                    <a class="btn btn-lg btn-info" type="button" data-toggle="modal" data-target="#reserveModal">Reserve Campsite</a>
                 </div>
 
             </div>
@@ -95,7 +95,7 @@
     
                                 <div class="form-group row">
                                     <div class="col">
-                                        <button class="btn btn-primary" type="cancel" data-dismiss="modal">Cancel</button>
+                                        <button class="btn btn-secondary" type="cancel" data-dismiss="modal">Cancel</button>
                                         <button class="btn btn-primary" type="submit">Search</button>
                                     </div>
                                 </div>
